--- a/src/app/create-bug/create-bug.component.scss
+++ b/src/app/create-bug/create-bug.component.scss
@@ -10,7 +10,7 @@ $margin-required: 2vh;
     align-items: center;
   }
   label {
-    color: #0294bd;
+    color: #9a68f2;
   }
   input {
     width: 50vw;
@@ -40,7 +40,7 @@ $margin-required: 2vh;
   }
 
   &_devs {
-    border: 0.5px solid #0294bd;
+    border: 0.5px solid #9a68f2;
     // border: 1px solid transparent;
     background: white;
     padding: 10px;
