--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -1,7 +1,7 @@
 .profile {
   h1 {
     box-shadow: 0px 0px 10px #d3d3d3;
-    background: #6c5ce7;
+    background: #8854D0;
     text-align: center;
     input {
       color: white;
