--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,7 @@ body {
   position: relative;
 
   ::selection {
-    background: #9c88ff;
+    background: #8854d0;
     color: white;
   }
 }
@@ -16,9 +16,9 @@ button {
   border: none;
   outline: none;
   padding: 10px;
-  background: #0294bd;
+  background: #8854d0;
   color: white;
-  border: 1px solid #0294bd;
+  border: 1px solid #8854d0;
   transition: 0.2s;
   cursor: pointer;
 
