--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -9,8 +9,35 @@
 
   button {
     width: 30vw;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px grey;
+    box-shadow: 0px 0px 5px #d3d3d3;
     margin-bottom: 5vh;
+    background: white;
+    color: #8854d0;
+    border: 1px solid #8854d0;
+    font-weight: bolder;
+    font-size: large;
+
+    &:hover {
+      background: #8854d0;
+      color: white;
+      box-shadow: 0px 0px 10px #d3d3d3;
+    }
+  }
+  .login {
+    margin-top: 5vh;
+  }
+}
+
+.forgot {
+  // border: 1px solid red;
+  text-align: center;
+  font-size: large;
+  cursor: pointer;
+
+  span {
+    &:hover {
+      color: #8854d0;
+      text-decoration: underline;
+    }
   }
 }
