--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -17,3 +17,5 @@
     <button (click)="mailpass()" class="login">Send link to your email</button><br>
     <button (click)="cancelFgpass()">Cancel</button><br>
 </div>
+
+<ngx-spinner></ngx-spinner>
