--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,4 +1,4 @@
-<p>Note: Once registered you cannot change your email</p>
+<p><b>Note:</b> Once registered, you cannot change your email.</p>
 
 <div class="form">
     <input type="text" placeholder="name" #name><br>
