--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,29 +1,57 @@
-<div class="container">
-    <div class="FakeDiv">
+<div id="wrapper" [ngClass]="{toggled: sideMenu}">
 
-        <!-- <div class="navbar" (click)="showSideMenu()">
-            navbar
-        </div> -->
-
-        <div class="sidemenu" id="sidemenu">
-            <h3>Ash Bug tracker</h3>
-            <ul>
-                <li routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
-                    Dashboard
-                </li>
-                <li routerLink="/profile" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
-                    Profile
-                </li>
-
-                <li routerLink="/login" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Login</li>
-                <li>Coming Soon</li>
-                <!-- <li (click)="logIn()" *ngIf="!loggedIn">Login</li> -->
-            </ul>
-            <br><br>
-            <div (click)="logOut()" class="logout">Logout</div>
+    <aside id="sidebar-wrapper">
+        <div class="sidebar-brand">
+            <h2><i class="fa fa-bug" aria-hidden="true"></i> &nbsp;&nbsp;Ash Bug tracker</h2>
         </div>
+        <ul class="sidebar-nav">
+            <li (click)="closeSideBar()">
+                <a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+                    <i class="fa fa-th" aria-hidden="true"></i>
+                    Dashboard
+                </a>
+            </li>
+            <li (click)="closeSideBar()">
+                <a routerLink="/profile" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+                    <i class="fa fa-user" aria-hidden="true"></i>
+                    Profile
+                </a>
+            </li>
+            <li (click)="closeSideBar()">
+                <a routerLink="/project" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+                    <i class="fa fa-tasks" aria-hidden="true"></i>
+                    Recent Project
+                </a>
+            </li>
+            <li (click)="closeSideBar()">
+                <a routerLink="/login" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+                    <i class="fa fa-angle-double-right" aria-hidden="true"></i>
+                    Login
+                </a>
+            </li>
+            <li (click)="closeSideBar()">
+                <a (click)="logOut()" style="cursor: pointer;" class="logout">
+                    <i class="fa fa-sign-out" aria-hidden="true"></i>
+                    Logout
+                </a>
+            </li>
+        </ul>
+    </aside>
+
+    <div id="navbar-wrapper">
+        <nav class="navbar navbar-inverse">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <div class="navbar-brand" id="sidebar-toggle" (click)="ToggleSidebar()">
+                        <i class="fa fa-bars" aria-hidden="true"></i>
+                    </div>
+                </div>
+            </div>
+        </nav>
     </div>
-    <div class="main" (click)="closeSidemenu()">
+
+    <section id="content-wrapper" (click)="closeSideBar()">
         <router-outlet></router-outlet>
-    </div>
+    </section>
+
 </div>
