--- a/src/app/register/register.component.scss
+++ b/src/app/register/register.component.scss
@@ -9,7 +9,25 @@
 
   button {
     width: 30vw;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px grey;
+    box-shadow: 0px 0px 5px #d3d3d3;
+    margin-bottom: 5vh;
+    background: white;
+    color: #8854d0;
+    border: 1px solid #8854d0;
+    font-weight: bolder;
+    font-size: large;
+
+    &:hover {
+      background: #8854d0;
+      color: white;
+      box-shadow: 0px 0px 10px #d3d3d3;
+    }
+  }
+}
+
+@media only screen and (max-width: 770px) {
+  input,
+  button {
+    width: 90% !important;
   }
 }
